--- a/findly-builder/src/app/components/results-rules/results-rules.component.scss
+++ b/findly-builder/src/app/components/results-rules/results-rules.component.scss
@@ -85,7 +85,8 @@
             text-align: center;
             background: #0D6EFD;                        
             font-weight: 900;
-            line-height: 21px;           
+            line-height: 21px;    
+            cursor: pointer;       
         }
     }
     span{               
@@ -98,7 +99,7 @@
         font-size: 20px;
         font-weight: 900;
         color: #fff;
-        cursor: pointer;
+        // cursor: pointer;
     }
 }
 .rule-name-input{
