--- a/findly-builder/src/app/components/traits/traits.component.scss
+++ b/findly-builder/src/app/components/traits/traits.component.scss
@@ -369,8 +369,10 @@
                 border-top: 1px solid #bdc1c6;
                 justify-content: left !important;
                 padding-left: 30px;
+                display: block;
                 .kr-sg-button-primary {
                     height: 34px;
+                    float: right;
                 }
             }
         }
