--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -947,7 +947,7 @@ and open the template in the editor.
                     flex: 1;
                     display: flex;                    
                     align-items: center;
-                    padding: 0px 10px;                   
+                    padding: 0px 10px;              
                 }
             }
         }
@@ -1147,6 +1147,9 @@ and open the template in the editor.
                 align-items: center;
                 padding: 17px 0;
                 border-bottom: 1px solid #8a959f;
+                font-size: 12px;
+                color: #9AA0A6;
+                font-weight: 500;
                 .col{
                     border-bottom: 0px solid #8a959f;                    
                     font-size: 12px;
