--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -32,8 +32,8 @@ and open the template in the editor.
 .kr-sg-toggle {
     position: relative;
     display: inline-block;
-    width: 30px;
-    height: 14px;
+    width: 40px;
+    height: 20px;
     margin: 0;
     &.with-label{
         margin-left: 25px;
@@ -88,9 +88,9 @@ and open the template in the editor.
                 background-color: $hoverBlue;
                 box-shadow: 0 0 1px $hoverBlue;
                 &::before{
-                    -webkit-transform: translateX(13px);
-                    -ms-transform: translateX(13px);
-                    transform: translateX(13px);
+                    -webkit-transform: translateX(20px);
+                    -ms-transform: translateX(20px);
+                    transform: translateX(20px);
                 }
                 span{
                     &.yes{
@@ -141,7 +141,7 @@ and open the template in the editor.
             font-size: 12px;
             color: $secondaryColor;
             &.yes{                
-                padding-left: 37px;
+                padding-left: 45px;
                 position: absolute;
                 top: -2px;
             }
@@ -151,13 +151,13 @@ and open the template in the editor.
                 margin-left: -25px;
             }
             &.enabled{
-                padding-left: 37px;
+                padding-left: 45px;
                 position: absolute;
                 top: -2px;
                 display: none;
             }  
             &.disabled{
-                padding-left: 37px;
+                padding-left: 45px;
                 position: absolute;
                 top: -2px;
             }            
@@ -165,10 +165,10 @@ and open the template in the editor.
         &::before{
             position: absolute;
             content: "";
-            height: 8px;
-            top: 2px;
-            width: 8px;
-            left: 5px;
+            height: 12px;
+            top: 3px;
+            width: 12px;
+            left: 3px;
             right: 0;
             background-color: $whiteColor;
             transition: .4s;
@@ -1203,7 +1203,7 @@ and open the template in the editor.
     }
     .error-text{
         font-size: 12px;
-        color: #ff001f;
+        color:#DD3646;
         padding: 3px 0px;
     }
     .dropdown-open{
@@ -1239,6 +1239,10 @@ and open the template in the editor.
             background-color: $whiteColor;
             padding: 0 10px;       
             text-align: left;  
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            padding-right: 25px;
             .multi-selected-items{
                 background: $borderColor;
                 padding: 4px 8px;
@@ -1319,7 +1323,7 @@ and open the template in the editor.
                 }
             } 
             &.error{
-                border: solid 1px #ff001f !important;
+                border: solid 1px #DD3646 !important;
             }
             &:hover{               
                 border: solid 1px #ccd1d7;
@@ -1389,6 +1393,10 @@ and open the template in the editor.
                     text-decoration: none !important;	
                     display: block;
                     cursor: pointer;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    max-width: 100%;
                     &.selected{
                         position: relative;
                         background-color: $backgroundColor;
@@ -1607,7 +1615,7 @@ and open the template in the editor.
             color: $secondaryColor;
         }
         &.error{
-            border: solid 1px #ff001f;
+            border: solid 1px#DD3646;
             &::placeholder{
                 color: $primaryColor;   
                 opacity: 1;      
@@ -1623,7 +1631,7 @@ and open the template in the editor.
     .error-msg{
         font-size: 12px;
         margin-top: 5px;
-        color: #ff001f;
+        color:#DD3646;
         line-height: 1.17;
     }
 }
