--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -861,7 +861,7 @@
             }
         }
         .allow-urlBox{
-            margin: 0 10px;
+            margin: 0;
             border-radius: 4px 4px 0px 0px;
         }
         .close-path{
