hiding left menu for Metrics

--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-<div class="sidebar-fixed position-fixed activeMenu">
+<div class="sidebar-fixed position-fixed activeMenu" *ngIf="show">
 	<perfect-scrollbar class="perfect-scroll">
 	<div class="list-group list-group-flush">	
 		<!-- <div [routerLink]="['/summary']" (click)="preview('Summary')" skipLocationChange routerLinkActive="active" mat-button class="mat-button">
