--- a/findly-builder/src/app/app.component.html
+++ b/findly-builder/src/app/app.component.html
@@ -1,8 +1,8 @@
 <meta name="viewport" content="width=device-width, user-scalable=no">
 <div class="krFindlyAppComponent">
     <div *ngIf="!loading">
-        <app-header></app-header>
-        <app-mainmenu class="toShowAppHeader"></app-mainmenu>
+        <app-header (showMenu) = "showMenu($event)"></app-header>
+        <app-mainmenu [show] = "showMainMenu" class="toShowAppHeader"></app-mainmenu>
         <app-body (initSearchSDK)="initSearchSDK()" class="container-fluid appContent"></app-body>
     </div>
 </div>
