--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -7,8 +7,8 @@
                     <span *ngIf="pagetitle !== undefined" class="currentTitle">{{pagetitle}}</span>
                 </div>
                 <div class="headerTabsContainer">
-                    <div class="headerMenuTab" [routerLink]="['/summary']" skipLocationChange routerLinkActive="active">Summary</div>
-                    <div class="headerMenuTab" [routerLink]="['/source']" skipLocationChange  routerLinkActive="active" >
+                    <div class="headerMenuTab" [routerLink]="['/summary']" skipLocationChange routerLinkActive="active" (click)="analyticsClick('summary')">Summary</div>
+                    <div class="headerMenuTab" [routerLink]="['/source']" skipLocationChange  routerLinkActive="active" (click)="analyticsClick('source')">
                        <span >Indices</span>
                        <span routerLink="/content" class="d-none"></span>
                        <span routerLink="/faqs" class="d-none"></span>
@@ -22,9 +22,9 @@
                        <span routerLink="/attributes" class="d-none"></span>
                        
                     </div>
-                    <div class="headerMenuTab" [routerLink]="['/metrics']" skipLocationChange routerLinkActive="active">Analytics</div>
-                    <div class="headerMenuTab">Experiments</div>
-                    <div class="headerMenuTab">Settings <span class="statusIndicator d-none"></span></div>
+                    <div class="headerMenuTab" [routerLink]="['/metrics']" skipLocationChange routerLinkActive="active" (click)="analyticsClick('metrics')">Analytics</div>
+                    <div class="headerMenuTab" (click)="analyticsClick('experiments')">Experiments</div>
+                    <div class="headerMenuTab" (click)="analyticsClick('settings')">Settings <span class="statusIndicator d-none"></span></div>
                 </div>
             </div>
             <ul class="navbar-nav nav-flex-icons align-items-center right-menu-content flex-row justify-content-end"> 
