--- a/findly-builder/src/app/components/metrics/metrics.component.scss
+++ b/findly-builder/src/app/components/metrics/metrics.component.scss
@@ -138,7 +138,7 @@
         }
     }
     .scroll_content{
-        height: calc(100vh - 218px);
+        height: calc(100vh - 150px);  // 218px
     }
     .filter-dropdown{
         position: absolute;
